--- a/src/main/resources/conf/config.yaml
+++ b/src/main/resources/conf/config.yaml
@@ -1,13 +1,13 @@
 accounts:
-  - awsAccessKey: ""
-    awsSecretKey: ""
-    displayAccountName: ""
+  - awsAccessKey: "AKIAIA4BC4BULLMKRA4Q"
+    awsSecretKey: "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"
+    displayAccountName: "AppD"
     
     # Regions where elastiCache is registered
     # Allowed values: ap-southeast-1, ap-southeast-2, ap-northeast-1, eu-central-1, 
     #                 us-east-1, eu-west-1, us-west-1, us-west-2, sa-east-1
     #
-    regions: ["us-east-1"]
+    regions: ["us-east-1", "us-west-2"]
     
 credentialsDecryptionConfig:
     enableDecryption: "false"
@@ -18,6 +18,9 @@ proxyConfig:
     port:
     username:
     password:
+
+#Filter metrics by bucket name. Only metrics from the specified buckets will be extracted. If none are mentioned, metrics from all buckets will be extracted.
+buckets: ["lambda-extension", "appdynamics-portal-qa"]
 
 # Global metrics config for all accounts
 metricsConfig:
