--- a/src/main/resources/conf/config.yaml
+++ b/src/main/resources/conf/config.yaml
@@ -54,5 +54,5 @@ concurrencyConfig:
   noOfRegionThreadsPerAccount: 3
   noOfMetricThreadsPerRegion: 3
 
-#prefix used to show up metrics in AppDynamics 
-metricPrefix: "Custom Metrics|Amazon S3|"
+#prefix used to show metrics in AppDynamics
+metricPrefix: "Server|Component:<TIER_ID>|Custom Metrics|Amazon S3|"
