--- a/src/main/resources/conf/config.yaml
+++ b/src/main/resources/conf/config.yaml
@@ -1,7 +1,8 @@
+# awsAccessKey, awsSecretKey, displayAccountName are mandatory fields. 
 accounts:
   - awsAccessKey: ""
     awsSecretKey: ""
-    displayAccountName: ""
+    displayAccountName: "AppD" 
     
     # Regions where elastiCache is registered
     # Allowed values: ap-southeast-1, ap-southeast-2, ap-northeast-1, eu-central-1, 
