--- a/src/main/resources/conf/config.yaml
+++ b/src/main/resources/conf/config.yaml
@@ -8,7 +8,7 @@ accounts:
     # Allowed values: ap-southeast-1, ap-southeast-2, ap-northeast-1, eu-central-1, 
     #                 us-east-1, eu-west-1, us-west-1, us-west-2, sa-east-1
     #
-    regions: ["us-east-1", "us-west-2"]
+    regions: ["us-west-2"]
     
 credentialsDecryptionConfig:
     enableDecryption: "false"
