--- a/pom.xml
+++ b/pom.xml
@@ -123,8 +123,7 @@
 								<mkdir dir="${target.dir}" />
 								<copy todir="${target.dir}">
 									<fileset dir="src/main/resources/conf" includes="monitor.xml" />
-									<fileset dir="src/main/resources" includes="conf/config.yaml" />
-									<fileset dir="src/main/resources" includes="conf/region-endpoints.yaml" />
+									<fileset dir="src/main/resources/conf" includes="config.yml" />
 									<fileset dir="${project.basedir}" includes="LICENSE.txt"/>
 									<fileset dir="${project.basedir}" includes="NOTICE.txt"/>
 								</copy>
